--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,16 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mysql-connector\n",
+      "  Downloading mysql-connector-2.2.9.tar.gz (11.9 MB)\n",
+      "                                              0.0/11.9 MB ? eta -:--:--\n",
+      "                                              0.0/11.9 MB ? eta -:--:--\n",
+      "                                              0.1/11.9 MB 2.1 MB/s eta 0:00:06\n",
+      "                                              0.2/11.9 MB 2.4 MB/s eta 0:00:05\n",
+      "     -                                        0.3/11.9 MB 2.5 MB/s eta 0:00:05\n",
+      "     -                                        0.5/11.9 MB 2.4 MB/s eta 0:00:05\n",
+      "     -                                        0.6/11.9 MB 2.8 MB/s eta 0:00:05\n",
+      "     --                                       0.7/11.9 MB 2.8 MB/s eta 0:00:05\n",
+      "     --                                       0.8/11.9 MB 2.8 MB/s eta 0:00:04\n",
+      "     ---                                      0.9/11.9 MB 2.7 MB/s eta 0:00:05\n",
+      "     ---                                      1.1/11.9 MB 3.0 MB/s eta 0:00:04\n",
+      "     ----                                     1.3/11.9 MB 3.1 MB/s eta 0:00:04\n",
+      "     ----                                     1.4/11.9 MB 3.2 MB/s eta 0:00:04\n",
+      "     -----                                    1.5/11.9 MB 3.1 MB/s eta 0:00:04\n",
+      "     -----                                    1.6/11.9 MB 3.2 MB/s eta 0:00:04\n",
+      "     ------                                   1.8/11.9 MB 3.2 MB/s eta 0:00:04\n",
+      "     ------                                   1.9/11.9 MB 3.2 MB/s eta 0:00:04\n",
+      "     -------                                  2.1/11.9 MB 3.2 MB/s eta 0:00:04\n",
+      "     -------                                  2.2/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     -------                                  2.3/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     --------                                 2.5/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     --------                                 2.6/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ---------                                2.8/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ---------                                2.9/11.9 MB 3.4 MB/s eta 0:00:03\n",
+      "     ----------                               3.0/11.9 MB 3.4 MB/s eta 0:00:03\n",
+      "     ----------                               3.2/11.9 MB 3.4 MB/s eta 0:00:03\n",
+      "     -----------                              3.3/11.9 MB 3.4 MB/s eta 0:00:03\n",
+      "     -----------                              3.4/11.9 MB 3.4 MB/s eta 0:00:03\n",
+      "     -----------                              3.5/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ------------                             3.6/11.9 MB 3.4 MB/s eta 0:00:03\n",
+      "     ------------                             3.8/11.9 MB 3.4 MB/s eta 0:00:03\n",
+      "     -------------                            3.9/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     -------------                            4.0/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     -------------                            4.1/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     --------------                           4.2/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     --------------                           4.3/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ---------------                          4.5/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ---------------                          4.6/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ---------------                          4.7/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ----------------                         4.8/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ----------------                         4.8/11.9 MB 3.2 MB/s eta 0:00:03\n",
+      "     ----------------                         5.0/11.9 MB 3.2 MB/s eta 0:00:03\n",
+      "     -----------------                        5.2/11.9 MB 3.3 MB/s eta 0:00:03\n",
+      "     ------------------                       5.4/11.9 MB 3.3 MB/s eta 0:00:02\n",
+      "     ------------------                       5.5/11.9 MB 3.3 MB/s eta 0:00:02\n",
+      "     -------------------                      5.7/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     -------------------                      5.9/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     --------------------                     6.1/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     --------------------                     6.2/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     ---------------------                    6.3/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     ---------------------                    6.4/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     ----------------------                   6.6/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     ----------------------                   6.7/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     -----------------------                  6.8/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     -----------------------                  7.0/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     ------------------------                 7.1/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     ------------------------                 7.2/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     ------------------------                 7.4/11.9 MB 3.4 MB/s eta 0:00:02\n",
+      "     -------------------------                7.5/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     -------------------------                7.7/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     --------------------------               7.8/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     --------------------------               7.9/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     ---------------------------              8.1/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     ---------------------------              8.2/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     ----------------------------             8.3/11.9 MB 3.5 MB/s eta 0:00:02\n",
+      "     ----------------------------             8.5/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     -----------------------------            8.6/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     -----------------------------            8.8/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     -----------------------------            8.9/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     ------------------------------           9.0/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     ------------------------------           9.2/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     -------------------------------          9.3/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     -------------------------------          9.4/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     --------------------------------         9.6/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     --------------------------------         9.7/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     ---------------------------------        9.8/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     ---------------------------------        9.9/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     ----------------------------------       10.1/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     ----------------------------------       10.2/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     ----------------------------------       10.3/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     -----------------------------------      10.5/11.9 MB 3.5 MB/s eta 0:00:01\n",
+      "     -----------------------------------      10.6/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     ------------------------------------     10.7/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     ------------------------------------     10.9/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     -------------------------------------    11.0/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     -------------------------------------    11.1/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     --------------------------------------   11.3/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     --------------------------------------   11.4/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     --------------------------------------   11.5/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  11.7/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  11.8/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  11.8/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  11.8/11.9 MB 3.6 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 11.9/11.9 MB 3.5 MB/s eta 0:00:00\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Building wheels for collected packages: mysql-connector\n",
+      "  Building wheel for mysql-connector (pyproject.toml): started\n",
+      "  Building wheel for mysql-connector (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for mysql-connector: filename=mysql_connector-2.2.9-cp310-cp310-win_amd64.whl size=247959 sha256=14b1c8f8b2c2fd3d8e56f1ee1401efc0115c6fe1dececcf18b525c312da65195\n",
+      "  Stored in directory: c:\\users\\aqua\\appdata\\local\\pip\\cache\\wheels\\76\\48\\9b\\da67ff1a18fe8e9d428f9b1a177716d4a7d363d2bbe83bf6cf\n",
+      "Successfully built mysql-connector\n",
+      "Installing collected packages: mysql-connector\n",
+      "Successfully installed mysql-connector-2.2.9\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install mysql-connector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,12 +206,12 @@
     "myresult = mycursor.fetchall()\n",
     "\n",
     "for x in myresult:\n",
-    "  print(x)\n"
+    "  print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +220,7 @@
        "list"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,28 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m myresult[:,\u001b[39m2\u001b[39;49m]\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
-   "source": [
-    "myresult["
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +240,92 @@
        "'mvitte2@fema.gov'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "myresult[2][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 'Marquita', 'mvitte2@fema.gov', 'HGKTlMn3mF')]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mydb = mysql.connector.connect(\n",
+    "    host=\"34.69.199.102\",\n",
+    "    user=\"root\",\n",
+    "    password=\"J]91kx6G&S:^]'Gu\",\n",
+    "    database=\"component\"\n",
+    ")\n",
+    "\n",
+    "mycursor = mydb.cursor()\n",
+    "\n",
+    "query = \"SELECT * FROM componenttable WHERE email= %s\" \n",
+    "values = \"mvitte2@fema.gov\"\n",
+    "res = tuple(map(int, values.split(', ')))\n",
+    "# query = \"SELECT * FROM componenttable WHERE email='mvitte2@fema.gov'\"\n",
+    "\n",
+    "mycursor.execute(\"SELECT * FROM componenttable WHERE email= %s\", values)\n",
+    "\n",
+    "# mycursor.execute(query, values)\n",
+    "myresult = mycursor.fetchall()\n",
+    "myresult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InternalError",
+     "evalue": "Unread result found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInternalError\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[38], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m mycursor\u001b[39m.\u001b[39mexecute(query, values)\n\u001b[0;32m     13\u001b[0m \u001b[39m# query = \"SELECT * FROM componenttable WHERE email='mvitte2@fema.gov'\"\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m mycursor\u001b[39m.\u001b[39;49mexecute(\u001b[39m\"\u001b[39;49m\u001b[39mSELECT * FROM componenttable WHERE email= \u001b[39;49m\u001b[39m%s\u001b[39;49;00m\u001b[39m\"\u001b[39;49m, values)\n\u001b[0;32m     17\u001b[0m \u001b[39m# mycursor.execute(query, values)\u001b[39;00m\n\u001b[0;32m     18\u001b[0m myresult \u001b[39m=\u001b[39m mycursor\u001b[39m.\u001b[39mfetchall()\n",
+      "File \u001b[1;32mc:\\Users\\Aqua\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\mysql\\connector\\cursor.py:521\u001b[0m, in \u001b[0;36mMySQLCursor.execute\u001b[1;34m(self, operation, params, multi)\u001b[0m\n\u001b[0;32m    518\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_connection:\n\u001b[0;32m    519\u001b[0m     \u001b[39mraise\u001b[39;00m errors\u001b[39m.\u001b[39mProgrammingError(\u001b[39m\"\u001b[39m\u001b[39mCursor is not connected\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 521\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_connection\u001b[39m.\u001b[39;49mhandle_unread_result()\n\u001b[0;32m    523\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset_result()\n\u001b[0;32m    524\u001b[0m stmt \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\Aqua\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\mysql\\connector\\connection.py:1059\u001b[0m, in \u001b[0;36mMySQLConnection.handle_unread_result\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1057\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconsume_results()\n\u001b[0;32m   1058\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39munread_result:\n\u001b[1;32m-> 1059\u001b[0m     \u001b[39mraise\u001b[39;00m errors\u001b[39m.\u001b[39mInternalError(\u001b[39m\"\u001b[39m\u001b[39mUnread result found\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mInternalError\u001b[0m: Unread result found"
+     ]
+    }
+   ],
+   "source": [
+    "mydb = mysql.connector.connect(\n",
+    "    host=\"34.69.199.102\",\n",
+    "    user=\"root\",\n",
+    "    password=\"J]91kx6G&S:^]'Gu\",\n",
+    "    database=\"component\"\n",
+    ")\n",
+    "\n",
+    "mycursor = mydb.cursor()\n",
+    "\n",
+    "query = \"SELECT * FROM componenttable WHERE email= %(email)s\"\n",
+    "values = {\"email\": \"mvitte2@fema.gov\"} \n",
+    "mycursor.execute(query, values)\n",
+    "# query = \"SELECT * FROM componenttable WHERE email='mvitte2@fema.gov'\"\n",
+    "\n",
+    "mycursor.execute(\"SELECT * FROM componenttable WHERE email= %s\", values)\n",
+    "\n",
+    "# mycursor.execute(query, values)\n",
+    "myresult = mycursor.fetchall()\n",
+    "myresult"
    ]
   },
   {
@@ -177,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
